# pySeaThruDev

./: .gitignore  .lfsconfig  crutchfield_implementation.ipynb  pyproject.toml  reference_implementation.ipynb
data/D1/D1/depth/: depthT_S02951.tif  depthT_S02952.tif  depthT_S02953.tif  depthT_S02954.tif  depthT_S02955.tif  depthT_S02956.tif  depthT_S02957.tif  depthT_S02958.tif  depthT_S02959.tif  depthT_S02960.tif  depthT_S02961.tif  depthT_S02962.tif  depthT_S02963.tif  depthT_S02964.tif  depthT_S02965.tif  depthT_S02966.tif  depthT_S02967.tif  depthT_S02968.tif  depthT_S02969.tif  depthT_S02970.tif  depthT_S02971.tif  depthT_S02972.tif  depthT_S02973.tif  depthT_S02974.tif  depthT_S02975.tif  depthT_S02976.tif  depthT_S02977.tif  depthT_S02978.tif  depthT_S02979.tif  depthT_S02980.tif  depthT_S02981.tif  depthT_S02982.tif  depthT_S02983.tif  depthT_S02984.tif  depthT_S02985.tif  depthT_S02986.tif  depthT_S02987.tif  depthT_S02988.tif  depthT_S02989.tif  depthT_S02990.tif  (+582 more)
data/D2/D2/depth/: depthT_S03585.tif  depthT_S03586.tif  depthT_S03587.tif  depthT_S03588.tif  depthT_S03589.tif  depthT_S03590.tif  depthT_S03591.tif  depthT_S03592.tif  depthT_S03593.tif  depthT_S03594.tif  depthT_S03595.tif  depthT_S03596.tif  depthT_S03597.tif  depthT_S03598.tif  depthT_S03599.tif  depthT_S03600.tif  depthT_S03601.tif  depthT_S03602.tif  depthT_S03603.tif  depthT_S03604.tif  depthT_S03605.tif  depthT_S03606.tif  depthT_S03607.tif  depthT_S03608.tif  depthT_S03609.tif  depthT_S03610.tif  depthT_S03611.tif  depthT_S03612.tif  depthT_S03613.tif  (+290 more)
pyseathrudev/: seathru.py
(+264 files in other folders)
