[tool.poetry]
name = "pyseathrudev"
version = "0.1.0"
description = ""
authors = ["Christopher L. Crutchfield <ccrutchf@ucsd.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = ">=1.22,<2.1"
scipy = "^1.14.1"
matplotlib = "^3.10.0"
scikit-image = "^0.25.0"
rawpy = "^0.24.0"
scikit-learn = "^1.6.0"
pillow = "^11.0.0"
opencv-python = "^4.10.0.84"
pywavelets = "^1.8.0"
numba = "^0.60.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
